<resources>
    <string name="app_name">Ulysse\'s News</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basic_preferences">Preference</string>

    <string name="title_basic_preference">Basic Preference</string>
    <string name="summary_basic_preference">Summary Basic Preference</string>

    <string name="title_stylish_preference">Stylist Preference</string>
    <string name="summary_stylish_preference">Summary Stylist Preference</string>

    <string name="title_icon_preference">Title Icon Preference</string>
    <string name="summary_icon_preference">Summary Icon Preference</string>
    

    <string name="title_single_line_title_preference">Title Single Line Preference</string>
    <string name="summary_single_line_title_preference">Summary Single Line Preference</string>
     
</resources>
