<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/basic_preferences">

        <Preference
            android:key="preference"
            android:title="@string/title_basic_preference"
            android:summary="@string/summary_basic_preference"/>

        <Preference
            android:key="stylized"
            android:title="@string/title_stylish_preference"
            android:summary="@string/summary_stylish_preference"/>

        <Preference
            android:key="icon"
            android:title="@string/title_icon_preference"
            android:summary="@string/summary_icon_preference"
            android:icon="@android:drawable/ic_menu_camera"/>

        <Preference
            android:key="single_line_title"
            android:title="@string/title_single_line_title_preference"
            android:summary="@string/summary_single_line_title_preference"
            app:singleLineTitle="true"/>
    </PreferenceCategory>


</androidx.preference.PreferenceScreen>